@@ -19,7 +19,7 @@
 # gnulib modules used by this package.
 gnulib_modules="
     acl alloca btowc extensions getline getopt gettext localcharset \
-    mbrlen mbrtowc mkstemp obstack pathmax snprintf stdbool \
+    mbrlen mbrtowc mbsinit mkstemp obstack pathmax snprintf stdbool \
     stat-macros strerror strverscmp unlocked-io vasnprintf verify wcrtomb wctob"
 
 SKIP_PO=t
